--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.6.0",
+    "@react-native-firebase/auth": "^18.6.0",
+    "@react-native-firebase/firestore": "^18.6.0",
     "@react-navigation/native-stack": "^6.9.16",
     "expo": "~49.0.15",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
