--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.2",
+    "lucide-react-native": "^0.294.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
